--- a/ch3.html
+++ b/ch3.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="ch3.css" />
+    <link rel="icon" href="HTML5_Logo.png">
     <title>Chapter 3</title>
   </head>
   <body>
